--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
+<BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu text="File">
@@ -107,18 +107,22 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints />
                 </rowConstraints>
                 <Label text="Obstacle distance from THR LEFT:" />
                 <Label text="Obstacle distance from THR RIGHT:" GridPane.rowIndex="1" />
-                <Label text="Obstacle distance from C/L:" GridPane.rowIndex="3" />
+                <Label text="Obstacle width:" GridPane.rowIndex="2" />
+                <Label text="Obstacle distance from C/L:" GridPane.rowIndex="4" />
                 <TextField fx:id="distanceFromTHRLeft" GridPane.columnIndex="1" />
                 <TextField fx:id="distanceFromTHRRight" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField fx:id="distanceFromCL" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                <TextField fx:id="obstacleWidth" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="distanceFromCL" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="0" />
                 <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <Label text="m" GridPane.columnIndex="2" />
-                <Label text="Obstacle side of C/L:" GridPane.rowIndex="2" />
-                <ComboBox fx:id="runwaySideComboBox" prefHeight="31.0" prefWidth="101.0" promptText="Select..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                <Label text="Obstacle side of C/L:" GridPane.rowIndex="3" />
+                <ComboBox fx:id="runwaySideComboBox" prefHeight="31.0" prefWidth="101.0" promptText="Select..." GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 <padding>
                     <Insets bottom="10.0" top="10.0" />
                 </padding>
