--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -7,6 +7,10 @@
     -fx-effect: null;
 }
 
+.text-field {
+    -fx-focus-color: #007bff;
+}
+
 .tab-pane .tab-header-area .tab-header-background {
     -fx-opacity: 0;
 }
