--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -20,6 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
+<?import javafx.scene.control.ScrollPane?>
 <BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
@@ -51,7 +51,7 @@
                 </Menu>
             </Menu>
             <Menu text="About">
-                <MenuItem onAction="#showAbout" text="Our project"/>
+                <MenuItem onAction="#showAbout" text="Our project" />
             </Menu>
             <Menu text="Help">
                 <MenuItem text="Help" />
@@ -140,18 +140,22 @@
             </GridPane>
             <TabPane prefHeight="500.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 <Tab text="Declared distances">
+                    <ScrollPane>
                     <TextFlow fx:id="declaredDistances" prefHeight="465.0" prefWidth="380.0" style="-fx-font-family: 'Consolas'; -fx-border-color: #ddd;">
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
                     </TextFlow>
+                    </ScrollPane>
                 </Tab>
                 <Tab text="Calculation breakdown">
+                    <ScrollPane>
                     <TextFlow fx:id="calculationsBreakdown" style="-fx-font-family: 'Consolas'; -fx-border-color: #ddd;">
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
                     </TextFlow>
+                    </ScrollPane>
                 </Tab>
             </TabPane>
             <opaqueInsets>
