feat (Obstacles): Adding GUI support for removing obstacles.
For my own sanity

--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -30,6 +30,7 @@
                 <Menu mnemonicParsing="false" text="Remove">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#handleRemoveAirport" text="Airport" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleRemoveObstacle" text="Obstacle" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Import">
