--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -140,6 +141,14 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" />
                 </VBox.margin>
             </GridPane>
+         <CheckBox fx:id="rotateViewCheckbox" alignment="CENTER" mnemonicParsing="false" onAction="#drawRunway" text="Rotate top-down view to match bearing">
+            <padding>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <VBox.margin>
+               <Insets left="50.0" />
+            </VBox.margin>
+         </CheckBox>
             <TabPane prefHeight="500.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 <Tab text="Declared distances">
                     <ScrollPane>
