--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
+<BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu text="File">
@@ -101,8 +101,8 @@
                 <Label text="Obstacle:" GridPane.rowIndex="3" />
                 <ComboBox fx:id="airportComboBox" onAction="#refresh_runways" prefWidth="325.0" promptText="Select an airport..." GridPane.columnIndex="1" />
                 <ComboBox fx:id="runwayComboBox" onAction="#refresh_virtual_runways" prefWidth="325.0" promptText="Select a runway..." GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <ComboBox fx:id="virtualRunwayComboBox" onAction="#drawRunway" prefWidth="325.0" promptText="Select a runway..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <ComboBox fx:id="obstructionComboBox" prefWidth="325.0" promptText="Add an obstacle..." GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <ComboBox fx:id="virtualRunwayComboBox" onAction="#handleVirtualRunwayComboBox" prefWidth="325.0" promptText="Select a runway..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <ComboBox fx:id="obstacleComboBox" onAction="#handleObstacleComboBox" prefWidth="325.0" promptText="Add an obstacle..." GridPane.columnIndex="1" GridPane.rowIndex="3" />
             </GridPane>
             <GridPane hgap="5.0" minHeight="160.0" vgap="5.0">
                 <columnConstraints>
@@ -162,7 +162,7 @@
             <TabPane prefHeight="500.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 <Tab text="Declared distances">
                     <ScrollPane>
-                    <TextFlow fx:id="declaredDistances" prefHeight="465.0" prefWidth="380.0" style="-fx-font-family: 'Consolas'; -fx-border-color: #ddd;">
+                    <TextFlow fx:id="declaredDistances" prefHeight="338.0" prefWidth="355.0" style="-fx-font-family: 'Consolas'; -fx-border-color: #ddd;">
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
@@ -171,7 +171,7 @@
                 </Tab>
                 <Tab text="Calculation breakdown">
                     <ScrollPane>
-                    <TextFlow fx:id="calculationsBreakdown" prefHeight="387.0" prefWidth="367.0" style="-fx-font-family: 'Consolas'; -fx-border-color: #ddd;">
+                    <TextFlow fx:id="calculationsBreakdown" prefHeight="338.0" prefWidth="355.0" style="-fx-font-family: 'Consolas'; -fx-border-color: #ddd;">
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
