fix (GUI): Changed menu bar colour to match the theme.

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -84,3 +84,7 @@
 #calculationsBreakdown, #declaredDistances {
     -fx-background-color: #ddd;
 }
+
+.menu-bar {
+    -fx-background-color: #ddd;
+}
